--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,12 @@ repository: Git repository where your resume will be hosted, only required if yo
 version: 2
 
 # Personal info
-name: Your Name
-title: Your job title
-email: Your email (optional)
-# email_title: Email (Email title override)
-phone: Your phone number (optional)
+name: Sol Kim
+title: School of Mathematics and Computing (Mathematics), Yonsei University
+email_title: kimsol729@yonsei.ac.kr
+# phone: 000
 # phone_title: Phone (Phone title override)
-website: Your website (eg. https://google.com)(optional)
+# website: Your website (eg. https://google.com)(optional)
 # website_title: Web (Website title override)
 
 # Dark Mode (true/false/never)
@@ -50,15 +49,25 @@ additional_links:
 
 # About Section
 # about_title: About Me (Use this to override about section title)
-about_profile_image: Directory of profile image (eg. images/profile.jpg)
+about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Write an awesome description about yourself here, this supports markdown, so you can add [links](http://foobar.com) and highlight things <mark>like this</mark>.
+I'm currently enrolled in the integrated master's and doctoral program in Mathematics at Yonsei University. 
 
-  You can even add paragraphs by using empty lines like this and add anything else [markdown](https://www.markdownguide.org/getting-started#what-is-markdown) supports such as
-    - Lists
-    - Tables
-    - <a href="google.com">Links</a>
-    - Images ![alt text](/images/landscape-trees.jpg "Trees")
+My academic journey is driven by a profound interest in mathematical biology, particularly in the realm of infectious disease epidemiology.
+
+In my research, I delve into the intricate dynamics of infectious diseases using a multi-faceted approach. 
+  - Numerical analysis, 
+  - Agent-Based Models (ABMs)
+  - Machine learning
+  - Reinforcement learning
+  - Deep neural networks
+  
+  I explore the complex interplay between pathogens, hosts, and the environment.
+  # You can even add paragraphs by using empty lines like this and add anything else [markdown](https://www.markdownguide.org/getting-started#what-is-markdown) supports such as
+  #   - Lists
+  #   - Tables
+  #   - <a href="google.com">Links</a>
+  #   - Images ![alt text](/images/landscape-trees.jpg "Trees")
 
 content:
   - title: Projects # Title for the section
@@ -81,6 +90,7 @@ content:
           Short overview of the project (optional)
         description: | # this will include new lines to allow paragraphs
           Description about the work on/with the project
+  
   - title: Experience
     layout: list
     content:
@@ -93,6 +103,7 @@ content:
           Short description of the company (optional)
         description: | # this will include new lines to allow paragraphs
           Description of role
+  
   - title: Education
     layout: list
     content:
@@ -104,6 +115,7 @@ content:
           Short institution or course description (optional)
         description: | # this will include new lines to allow paragraphs
           Description of qualification
+  
   - title: A Little More About Me
     layout: text
     content: | # this will include new lines to allow paragraphs
