--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ additional_links:
 # About Section
 # about_title: About Me (Use this to override about section title)
 about_profile_image: images/profile.jpg
-about_content: # this will include new lines to allow paragraphs
+about_content: | # this will include new lines to allow paragraphs
 I'm currently enrolled in the integrated master's and doctoral program in Mathematics at Yonsei University. 
 My academic journey is driven by a profound interest in mathematical biology, particularly in the realm of infectious disease epidemiology.
 
@@ -61,7 +61,7 @@ In my research, I delve into the intricate dynamics of infectious diseases using
   - Reinforcement learning
   - Deep neural networks
   
-  I explore the complex interplay between pathogens, hosts, and the environment.
+  # I explore the complex interplay between pathogens, hosts, and the environment.
   # You can even add paragraphs by using empty lines like this and add anything else [markdown](https://www.markdownguide.org/getting-started#what-is-markdown) supports such as
   #   - Lists
   #   - Tables
